fixing spacing issue

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 .formContainer {
-    margin-left: 3%
+    margin-left: 40px;
 }
 
 .dropdownHeading {
